Fix navbar
-Navbar was bleeding off screen when margins were applied to it to
accommodate the left navbar.
-Fixed this problem by adding a margin to the right of the navbar.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,14 @@
   margin-left: 160px;
 }
 
+.navbar {
+  width: 100%;
+}
+
+.navbar-right {
+  margin-right: 160px;
+}
+
 .landing-page {
   text-align: center;
   margin-right: 160px;
